Added new template files to Cello theme.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,9 +34,15 @@ ul {
     padding: 0px;
 }
 
+label {
+  display: block;
+}
+
 .searchform label {
   display: none;
 } 
+
+
 
 h2 {
   margin-top:40px;
